# MakeBootableUSB-on-Linux

./: README.md  __init__.py  create_icon.py  install.sh  mbulinux.desktop  pyproject.toml  requirements.txt  run.sh  setup.py
mbulinux/: __init__.py  __main__.py  app.py  cli.py  constants.py
mbulinux/core/: __init__.py  disk_manager.py  formatter.py  image_analyzer.py  permissions.py
mbulinux/core/writer_strategies/: __init__.py  base_strategy.py  linux_strategy.py  windows_strategy.py
mbulinux/data/styles/: dark.qss  light.qss
mbulinux/ui/: __init__.py  main_window.py  resources.py
mbulinux/ui/components/: __init__.py  disk_list_widget.py  iso_selector.py  progress_panel.py  settings_panel.py
mbulinux/utils/: __init__.py  async_worker.py  humanize.py  logging_setup.py  system.py
scripts/: build-deb.sh  install-dependencies.sh
tests/: test_disk_manager.py
