[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mbulinux"
version = "0.1.0"
description = "GUI tool to create bootable USB drives from ISO images on Linux"
readme = "README.md"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {text = "GPL-3.0-or-later"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Topic :: System :: Installation",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.5.0",
    "pydbus>=0.6.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "black>=23.0", "mypy>=1.0"]

[project.scripts]
mbulinux = "mbulinux.__main__:main"
mbulinux-cli = "mbulinux.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/MakeBootableUSB_on_Linux"
"Bug Tracker" = "https://github.com/yourusername/MakeBootableUSB_on_Linux/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["mbulinux*"]
exclude = ["tests*", "scripts*", "packaging*"]